--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Note</string>
+    <string name="app_name">My Notes</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="title">Title</string>
